# vazao360_v2

./: .env  README.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: auth.py  ui.py
app/core/equations/: base.py  models.py
app/core/models/: composition.py  inputs.py
app/core/selection/: selector.py
app/core/thermo/: mixture_props.py
app/core/tier/: classifier.py
app/core/units/: ureg.py
app/core/utils/: si.py  validators.py
app/core/vision/: __init__.py  hole_detector.py
app/image/: __init__.py  diameter.py
app/integrations/: openai_vision.py
data/: species_catalog.yaml
pages/: 00_📷_Diâmetro_por_Imagem.py  01_Entrada_de_Dados.py  02_Calculadora.py  03_Classificação_e_Relatório.py
