
[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "lopc_tier_calc"
version = "0.3.0"
description = "Calculadora de LOPC com classificação TIER em Streamlit (SI-audit)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.37.0",
  "pydantic>=2.7.0",
  "pandas>=2.2.2",
  "numpy>=1.26",
  "altair>=5.0.0",
  "httpx>=0.27.0",
  "opencv-contrib-python-headless>=4.7.0",
  "Pillow>=9.0.0",
  "streamlit-image-coordinates>=0.1.3"
]
